--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ name = "toyyibpay"
 version = "0.1.0"
 description = "Official Python SDK for ToyyibPay Payment Gateway"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Waiz Wafiq", email = "mwaizwafiq@gmail.com"},
 ]
 maintainers = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Waiz Wafiq", email = "mwaizwafiq@gmail.com"},
 ]
 keywords = [
     "toyyibpay",
@@ -22,16 +22,15 @@ keywords = [
     "malaysia",
     "fpx",
     "credit-card",
-    "payment-processing"
+    "payment-processing",
+    "payment-gateway"
 ]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 1 - Planning",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -43,7 +42,7 @@ dependencies = [
     "httpx>=0.24.0",
     "pydantic>=2.0.0",
     "python-dateutil>=2.8.0",
-    "typing-extensions>=4.0.0; python_version < '3.10'",
+    "typing-extensions>=4.0.0; python_version <= '3.10'",
 ]
 
 [project.optional-dependencies]
