--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+# NOTE: NOT the tests directory itself!!! >:C
 
 # Translations
 *.mo
@@ -154,6 +155,13 @@ secrets/
 *.tmp
 .env.*
 !.env.example
+
+# Test artifacts (results, not test files!)
+.benchmarks/
+test-results/
+*.prof
+.test_cache/
+
 
 # Personal
 journal.md
